--- a/docs.01.html
+++ b/docs.01.html
@@ -34,7 +34,7 @@
 
     <div id="app-5">
       <p>{{ message }}</p>
-      <button v-on:click="reverseMessage">Reverse Message</button>
+      <button @click="reverseMessage">Reverse Message</button>
     </div>
 
     <div id="app-6">
